--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "homepage": "https://github.com/vinayrajaikar/Assignment#readme",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.0",
     "nodemon": "^3.1.9"
   }
